egressLockdown/manifests/11-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: ${NAMESPACE}
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 8080
